manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: withastro-github-comment-templates
