manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: withastro-github-comment-templates
  namespace: withastro-github-comment-templates
  labels:
    app: withastro-github-comment-templates
spec:
  replicas: 3
  selector:
    matchLabels:
      app: withastro-github-comment-templates
  template:
    metadata:
      labels:
        app: withastro-github-comment-templates
    spec:
      containers:
        - name: withastro-github-comment-templates
          image: "trueberryless/withastro-github-comment-templates:main-5612b5a94505f7477d918878de27ca6c39f94ba6"
          imagePullPolicy: Always
