manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: withastro-github-comment-templates
  namespace: withastro-github-comment-templates
  annotations:
    cert-manager.io/issuer: acme-issuer
spec:
  selector:
    app: withastro-github-comment-templates
  ports:
    - name: http
      port: 80
